[iOS] <video> elements without audio tracks should not interrupt music https://bugs.webkit.org/show_bug.cgi?id=149888

Reviewed by Eric Carlson.

Source/WebCore:

Tests: TestWebKitAPI/Tests/WebKit/ios/AudioSessionCategoryIOS.mm

Only set the AVAudioSession category to "playback" when the video element in question has an
audio track.

Add a new PlatformMediaSessionClient method called canProduceAudio(), overridden in HTMLMediaElement
and AudioContext, which is checked when updating the AudioSession category in
PlatformMediaSessionManager::updateSessionState().

* Modules/webaudio/AudioContext.h:
* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerCharacteristicChanged):
* html/HTMLMediaElement.h:
* platform/audio/PlatformMediaSession.cpp:
(WebCore::PlatformMediaSession::activeAudioSessionRequired):
(WebCore::PlatformMediaSession::setCanProduceAudio):
* platform/audio/PlatformMediaSession.h:
(WebCore::PlatformMediaSession::canProduceAudio):
* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::canProduceAudio):
(WebCore::PlatformMediaSessionManager::sessionCanProduceAudioChanged):
(WebCore::PlatformMediaSessionManager::activeAudioSessionRequired):
(WebCore::PlatformMediaSessionManager::sessionWillBeginPlayback):
* platform/audio/PlatformMediaSessionManager.h:
* platform/audio/mac/MediaSessionManagerMac.cpp:
(PlatformMediaSessionManager::updateSessionState):

Tools:

Add tests to ensure that the AVAudioSession category is correctly set when playing
back media both with and without audio tracks.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/ios/AudioSessionCategoryIOS.mm: Added.
(-[AudioSessionCategoryUIWebViewDelegate webView:shouldStartLoadWithRequest:navigationType:]):
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit/ios/video-with-audio.html: Added.
* TestWebKitAPI/Tests/WebKit/ios/video-with-audio.mp4: Added.
* TestWebKitAPI/Tests/WebKit/ios/video-without-audio.html: Added.
* TestWebKitAPI/Tests/WebKit/ios/video-without-audio.mp4: Added.


Canonical link: https://commits.webkit.org/169110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192027 268f45cc-cd09-0410-ab3c-d52691b4dbfc